# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,14 @@
 import { Router, type IRouter } from "express";
+import brandsRouter from "./brands";
 import healthRouter from "./health";
 import usersRouter from "./users";
+import visitsRouter from "./visits";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(usersRouter);
+router.use(brandsRouter);
+router.use(visitsRouter);
 
 export default router;
