# artifacts/api-server/src/routes/visits.ts
@@ -1,0 +1,8 @@
+import { Router, type IRouter } from "express";
+import { createVisit } from "../controllers/visitController";
+
+const router: IRouter = Router();
+
+router.route("/visits").post(createVisit);
+
+export default router;
